hphp/hack/test/decl/enum_user_attributes.php
<?hh

<<Foo('a', 'b'), Bar>>
enum E : string {
  A = 'A';
  B = 'B';
}
